--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -25,5 +25,6 @@
     height: 2.813rem;
     padding: 0.801rem 1.188rem 0.886rem 1.375rem;
     border-radius: 3px;
+    color: var(--white);
     background-color: var(--azure);
   }
