--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+:root {
+  --azure: #0290ff;
+  --medium-blue: #307bbe;
+  --black-5: #0000000d;
+  --white: #fafafa;
+  --white-two: #ffffff;
+  --white-three: #e8e8e8;
+}
+
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +29,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  border: 1px solid transparent;
+  background: transparent;
 }
