Add CSS styles to books container

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --azure: #0290ff;
   --medium-blue: #307bbe;
   --black-5: #0000000d;
+  --pale-grey: #f5f6fa;
   --white: #fafafa;
   --white-two: #ffffff;
   --white-three: #e8e8e8;
