--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -14,7 +14,14 @@
   }
 
   .LessonPanel {
-    padding: 0.813rem 5.688rem 0.813rem 1.063rem;
+    padding: 0.813rem 20.688rem 0.813rem 1.063rem;
+    border-radius: 4px;
+    border: solid 1px var(--white-three);
+    background-color: var(--white-two);
+  }
+
+  .LessonPanel2 {
+    padding: 0.813rem 7.688rem 0.813rem 1.063rem;
     border-radius: 4px;
     border: solid 1px var(--white-three);
     background-color: var(--white-two);
