--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -1,37 +1,37 @@
 .Title {
-    font-family: Montserrat;
-    font-size: 1.25rem;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: -0.18px;
-    color: #888;
-  }
+  font-family: Montserrat, sans-serif;
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  color: #888;
+}
 
-  form * {
-    margin-right: 1em;
-  }
+form * {
+  margin-right: 1em;
+}
 
-  .LessonPanel {
-    padding: 0.813rem 20.688rem 0.813rem 1.063rem;
-    border-radius: 4px;
-    border: solid 1px var(--white-three);
-    background-color: var(--white-two);
-  }
+.LessonPanel {
+  padding: 0.813rem 20.688rem 0.813rem 1.063rem;
+  border-radius: 4px;
+  border: solid 1px var(--white-three);
+  background-color: var(--white-two);
+}
 
-  .LessonPanel2 {
-    padding: 0.813rem 7.688rem 0.813rem 1.063rem;
-    border-radius: 4px;
-    border: solid 1px var(--white-three);
-    background-color: var(--white-two);
-  }
+.LessonPanel2 {
+  padding: 0.813rem 7.688rem 0.813rem 1.063rem;
+  border-radius: 4px;
+  border: solid 1px var(--white-three);
+  background-color: var(--white-two);
+}
 
-  .Rectangle2 {
-    width: 11.5rem;
-    height: 2.813rem;
-    padding: 0.801rem 1.188rem 0.886rem 1.375rem;
-    border-radius: 3px;
-    color: var(--white);
-    background-color: var(--azure);
-  }
+.Rectangle2 {
+  width: 11.5rem;
+  height: 2.813rem;
+  padding: 0.801rem 1.188rem 0.886rem 1.375rem;
+  border-radius: 3px;
+  color: var(--white);
+  background-color: var(--azure);
+}
