--- a/src/components/styles/BooksCard.module.css
+++ b/src/components/styles/BooksCard.module.css
@@ -1,5 +1,12 @@
+.BooksContainer {
+  height: auto;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
 .LessonPanel {
-  width: 75rem;
+  width: 85vw;
+  max-width: 981.074px;
   height: 10.625rem;
   padding: 2rem 1.688rem;
   border-radius: 4px;
@@ -16,6 +23,13 @@
   justify-content: space-between;
   align-items: center;
   gap: 2em;
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1em;
+  }
 }
 
 .SchoolOf {
@@ -85,6 +99,11 @@
   height: 4.25rem;
   border: solid 5px var(--medium-blue);
   border-radius: 50%;
+
+  @media (max-width: 1000px) {
+    width: 2.25rem;
+    height: 2.25rem;
+  }
 }
 
 .PercentComplete {
@@ -97,6 +116,10 @@
   letter-spacing: normal;
   color: #121212;
   display: block;
+
+  @media (max-width: 1000px) {
+    font-size: 1.5rem;
+  }
 }
 
 .Completed {
@@ -110,6 +133,10 @@
   letter-spacing: normal;
   color: #121212;
   display: block;
+
+  @media (max-width: 1000px) {
+    font-size: 0.8rem;
+  }
 }
 
 .Line2 {
@@ -117,6 +144,11 @@
   height: 4.375rem;
   margin: 0 0 0 2rem;
   border: solid 1px var(--white-three);
+
+  @media (max-width: 1000px) {
+    display: none;
+    visibility: hidden;
+  }
 }
 
 .CurrentChapter {
@@ -142,6 +174,10 @@
   letter-spacing: -0.4px;
   color: #121212;
   display: block;
+
+  @media (max-width: 1000px) {
+    margin: 0.2rem 0;
+  }
 }
 
 .Rectangle2 {
@@ -150,4 +186,18 @@
   background-color: var(--azure);
   color: var(--white);
   text-transform: uppercase;
+
+  @media (max-width: 1000px) {
+    padding: 0.438rem 1rem 0.5rem;
+  }
+}
+
+.Load {
+  text-align: center;
+  color: #03a9f4;
+}
+
+.Error {
+  text-align: center;
+  color: #e91e63;
 }
