--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -7,10 +7,19 @@
   line-height: normal;
   letter-spacing: -0.18px;
   color: #888;
+  margin-bottom: 0.4rem;
 }
 
-form * {
-  margin-right: 1em;
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
+
+  @media (max-width: 460px) {
+    flex-direction: column;
+  }
 }
 
 .LessonPanel {
@@ -22,9 +31,18 @@ form * {
   @media (max-width: 1000px) {
     width: 20vw;
   }
+
+  @media (max-width: 768px) {
+    width: 30vw;
+  }
+
+  @media (max-width: 460px) {
+    width: 90vw;
+  }
 }
 
 .LessonPanel2 {
+  width: 20vw;
   padding: 0.813rem 7.688rem 0.813rem 1rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
@@ -33,6 +51,14 @@ form * {
   @media (max-width: 1000px) {
     width: 15vw;
     padding: 0.813rem 0.63rem 0.813rem 0.1rem;
+  }
+
+  @media (max-width: 768px) {
+    width: 25vw;
+  }
+
+  @media (max-width: 460px) {
+    width: 90vw;
   }
 }
 
