--- a/src/components/menu/styles/NavLink.module.css
+++ b/src/components/menu/styles/NavLink.module.css
@@ -14,6 +14,19 @@
   line-height: normal;
   letter-spacing: normal;
   color: var(--azure);
+
+  @media (max-width: 768px) {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  @media (max-width: 500px) {
+    position: absolute;
+    top: 1em;
+    width: 90%;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(--azure);
+  }
 }
 
 .BOOKS {
@@ -25,6 +38,10 @@
   line-height: normal;
   letter-spacing: 1.9px;
   color: #121212;
+
+  @media (max-width: 490px) {
+    font-size: 0.75rem;
+  }
 }
 
 .CATEGORIES {
@@ -37,4 +54,8 @@
   line-height: normal;
   letter-spacing: 1.9px;
   color: #121212;
+
+  @media (max-width: 490px) {
+    font-size: 0.75rem;
+  }
 }
