--- a/src/components/menu/styles/User.module.css
+++ b/src/components/menu/styles/User.module.css
@@ -4,9 +4,21 @@
   padding: 0.875rem;
   border: solid 1px var(--white-three);
   border-radius: 50%;
+
+  @media (max-width: 500px) {
+    width: 0.813rem;
+    height: 0.813rem;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
 
 .Mask {
   width: 1.063rem;
   height: 1.063rem;
+
+  @media (max-width: 500px) {
+    margin: -0.5rem;
+  }
 }
