--- a/src/components/styles/BooksCard.module.css
+++ b/src/components/styles/BooksCard.module.css
@@ -7,7 +7,7 @@
 .LessonPanel {
   width: 85vw;
   max-width: 981.074px;
-  height: 10.625rem;
+  height: auto;
   padding: 2rem 1.688rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
@@ -16,6 +16,14 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1em;
+
+  @media (max-width: 768px) {
+    width: 90vw;
+  }
+
+  @media (max-width: 600px) {
+    align-items: flex-end;
+  }
 }
 
 .LessonPanel2 {
@@ -33,6 +41,8 @@
 }
 
 .SchoolOf {
+  width: 100%;
+  max-width: 160px;
   opacity: 0.5;
   font-family: Montserrat, sans-serif;
   font-size: 0.875rem;
@@ -45,6 +55,10 @@
 }
 
 .Title {
+  width: 100%;
+  max-width: 202px;
+  height: auto;
+  line-break: strict;
   font-family: RobotoSlab, sans-serif;
   font-size: 1.375rem;
   font-weight: bold;
@@ -56,6 +70,10 @@
 }
 
 .Author {
+  width: 100%;
+  max-width: 202px;
+  height: auto;
+  line-break: strict;
   font-family: RobotoSlab, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
@@ -70,6 +88,13 @@
   display: flex;
   gap: 1em;
   margin-top: 1em;
+
+  @media (max-width: 600px) {
+    gap: 0;
+    margin-top: 2em;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .BookAction {
@@ -83,10 +108,15 @@
   color: #4386bf;
   padding: 0 1em 0 0;
   border-right: solid 1px var(--white-three);
-}
 
-.BookAction:nth-last-of-type(1) {
-  border: none;
+  @media (max-width: 600px) {
+    width: 100%;
+    max-width: 72.156px;
+    border: none;
+    padding: 0;
+    border-top: solid 1px var(--white-three);
+    text-align: left;
+  }
 }
 
 .CompletionPercentageBox {
@@ -188,7 +218,12 @@
   text-transform: uppercase;
 
   @media (max-width: 1000px) {
-    padding: 0.438rem 1rem 0.5rem;
+    padding: 0.438rem 1rem;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 0.6rem;
+    padding: 0.3rem;
   }
 }
 
