--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 
 body {
@@ -34,6 +35,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--pale-grey);
 }
 
 code {
