--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 
 body {
   margin: 0;
+  padding: 4%;
   font-family:
     -apple-system,
     BlinkMacSystemFont,
@@ -35,7 +36,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--pale-grey);
+  background-color: var(--white);
+}
+
+#root {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  border-radius: 4px;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  background-color: #fafafa;
 }
 
 code {
