Fix google fonts import

--- a/src/components/buttons/styles/RemoveButton.module.css
+++ b/src/components/buttons/styles/RemoveButton.module.css
@@ -1,5 +1,5 @@
 .BookAction {
-  font-family: RobotoSlab, sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
