--- a/src/components/styles/BooksCard.module.css
+++ b/src/components/styles/BooksCard.module.css
@@ -6,9 +6,8 @@
 
 .LessonPanel {
   width: 85vw;
-  max-width: 981.074px;
   height: auto;
-  padding: 2rem 1.688rem;
+  padding: 2rem 5.688rem 2rem 1.688rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
   background-color: var(--white-two);
