--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
 :root {
   --azure: #0290ff;
   --medium-blue: #307bbe;
+  --black-4: #121212;
   --black-5: #0000000d;
   --pale-grey: #f5f6fa;
+  --grey: #888;
   --white: #fafafa;
   --white-two: #fff;
   --white-three: #e8e8e8;
