--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -1,11 +1,8 @@
 .Title {
   font-size: 1.25rem;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.18px;
-  color: #888;
+  color: var(--grey);
   margin-bottom: 0.4rem;
 }
 
