--- a/src/components/form/styles/Form.module.css
+++ b/src/components/form/styles/Form.module.css
@@ -7,6 +7,8 @@
 }
 
 form {
+  width: 75vw;
+  max-width: 1115.67px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -19,42 +21,42 @@ form {
 }
 
 .LessonPanel {
+  width: 27%;
   padding: 0.813rem 1.063rem 0.813rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
   background-color: var(--white-two);
 
-  @media (max-width: 1000px) {
+  /* @media (max-width: 1000px) {
     width: 20vw;
   }
 
   @media (max-width: 768px) {
     width: 30vw;
-  }
+  } */
 
   @media (max-width: 460px) {
-    width: 90vw;
+    width: 90%;
   }
 }
 
 .LessonPanel2 {
-  width: 20vw;
-  padding: 0.813rem 7.688rem 0.813rem 1rem;
+  width: 27%;
+  padding: 0.813rem 1.063rem 0.813rem 1rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
   background-color: var(--white-two);
 
   @media (max-width: 1000px) {
-    width: 15vw;
     padding: 0.813rem 0.63rem 0.813rem 0.1rem;
   }
 
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     width: 25vw;
-  }
+  } */
 
   @media (max-width: 460px) {
-    width: 90vw;
+    width: 90%;
   }
 }
 
